fix: add console log for user modal opening to track user data

--- a/cluster.html
+++ b/cluster.html
@@ -386,6 +386,7 @@
             // full.email, full.wallet, full.cursus_users, full.projects_users, full.coalition, etc.
             // (в зависимости от того, что реально приходит)
         } catch {}
+    console.log("openUserModal", user);
     }
 
 
