fix: add console log to display full user profile in user modal

--- a/cluster.html
+++ b/cluster.html
@@ -385,6 +385,7 @@
             // можешь показать любые поля:
             // full.email, full.wallet, full.cursus_users, full.projects_users, full.coalition, etc.
             // (в зависимости от того, что реально приходит)
+            console.log("full user profile", full);
         } catch {}
     console.log("openUserModal", user);
     }
