--- a/cluster.html
+++ b/cluster.html
@@ -56,7 +56,7 @@
     .zone{ padding:10px; }
     .zoneInner{ display:grid; gap:12px; }
     /* .zoneRow{ display:grid; grid-template-columns: 1fr auto; align-items:center; gap:14px; } */
-    .zoneRow{
+    /* .zoneRow{
       display:grid;
       grid-template-columns: 1fr auto;
       align-items:center;
@@ -67,7 +67,16 @@
     .zoneRow:last-child{
       padding-bottom:0;
       border-bottom:none;
+    } */
+    .zoneRow{
+      display:grid;
+      grid-template-columns: 1fr auto;
+      align-items:center;
+      gap:14px;
+      padding-top:12px;
     }
+    .zoneRow:first-child{ padding-top:0; }
+    .zoneRow + .zoneRow{ border-top:1px solid var(--line); }
     .rowLabel{ font-size:28px; font-weight:700; opacity:.92; }
 
     .seats{ display:flex; gap:8px; align-items:flex-end; }
