--- a/cluster.html
+++ b/cluster.html
@@ -60,8 +60,9 @@
       display:grid;
       grid-template-columns: 1fr auto;
       align-items:center;
-      gap:20px;
-      padding-bottom:12px;
+      gap:14px;
+      padding-top: 15px;
+      padding-bottom:15px;
       border-bottom:1px solid var(--line);
     }
     .zoneRow:last-child{
