--- a/cluster.html
+++ b/cluster.html
@@ -50,12 +50,14 @@
 
     /* Map */
     .mapWrap{ display:grid; grid-template-columns: 1fr 1fr; gap:18px; }
+    /* @media (max-width: 980px){ .mapWrap{ grid-template-columns: 1fr; } } */
     @media (max-width: 980px){
+      .grid > .card:last-child{
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+      }
       .mapWrap{
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        transform: scale(0.82);
-        transform-origin: top left;
-        width: calc(100% / 0.82);
+        min-width: 720px;
       }
     }
 
