fix: adjust mapWrap styles for improved responsiveness on smaller screens

--- a/cluster.html
+++ b/cluster.html
@@ -51,13 +51,18 @@
     /* Map */
     .mapWrap{ display:grid; grid-template-columns: 1fr 1fr; gap:18px; }
     /* @media (max-width: 980px){ .mapWrap{ grid-template-columns: 1fr; } } */
-    @media (max-width: 980px){
+    /* @media (max-width: 980px){
       .grid > .card:last-child{
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
       }
       .mapWrap{
-        min-width: 420px;
+        min-width: 720px;
+      }
+    } */
+    @media (max-width: 980px){
+      .mapWrap{
+        transform-origin: top center;
       }
     }
 
