--- a/cluster.html
+++ b/cluster.html
@@ -49,7 +49,7 @@
     .tab.active{ color:var(--text); border-color:#3a4b6b; background:rgba(255,255,255,.04); }
 
     /* Map */
-    .mapWrap{ display:grid; grid-template-columns: 1fr 1fr; gap:18px; }
+    /* .mapWrap{ display:grid; grid-template-columns: 1fr 1fr; gap:18px; } */
     /* @media (max-width: 980px){ .mapWrap{ grid-template-columns: 1fr; } } */
     /* @media (max-width: 980px){
       .grid > .card:last-child{
@@ -60,6 +60,12 @@
         min-width: 720px;
       }
     } */
+    /* @media (max-width: 980px){
+      .mapWrap{
+        transform-origin: top center;
+      }
+    } */
+    .mapWrap{ display:grid; grid-template-columns: repeat(2, minmax(320px, 1fr)); gap:18px; }
     @media (max-width: 980px){
       .mapWrap{
         transform-origin: top center;
