fix: change statistics section layout from grid to flex for improved alignment

--- a/cluster.html
+++ b/cluster.html
@@ -65,7 +65,7 @@
         transform-origin: top center;
       }
     }
-    .statistics{ display:grid; grid-template-columns: 1fr 1fr; gap:18px; }
+    .statistics{ display:flex; grid-template-columns: 1fr 1fr; gap:18px; }
     @media (max-width: 600px){
       .statistics{
         transform-origin: top center;
