fix: enable logging of cluster data for debugging purposes

--- a/cluster.html
+++ b/cluster.html
@@ -993,7 +993,7 @@
       }
 
       const data = await res.json();
-      // console.log("cluster data", data);
+      console.log("cluster data", data);
       console.log("campus", campus);
 
       // сохранить последние данные для отладки
